amf-graphql-test-sets/shared/src/test/resources/graphql/tck/apis/invalid/introspection-custom-scalar.api.report
ModelId: file://amf-graphql-test-sets/shared/src/test/resources/graphql/tck/apis/invalid/introspection-custom-scalar.api.graphql
Profile: GraphQL
Conforms: false
Number of results: 1

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/parser#DomainElement-name-invalidIntrospectionName
  Message: Name must not begin with '__' as this is used exclusively by GraphQL’s introspection system
  Severity: Violation
  Target: file://amf-graphql-test-sets/shared/src/test/resources/graphql/tck/apis/invalid/introspection-custom-scalar.api.graphql#/declares/scalar/__Date
  Property: http://www.w3.org/ns/shacl#name
  Range: [(9,7)-(9,13)]
  Location: 
